[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/SpriteGenerator/SpriteGenerator.gd" type="Script" id=1]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.74902, 0.380392, 0.415686, 1 )
thickness = 8

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.639216, 0.745098, 0.54902, 1 )
thickness = 8

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.368627, 0.505882, 0.67451, 1 )
thickness = 8

[node name="SpriteGenerator" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sliders" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedSlider" type="HSlider" parent="VBoxContainer/Sliders"]
margin_right = 150.0
margin_bottom = 16.0
hint_tooltip = "Red"
custom_styles/slider = SubResource( 1 )
max_value = 3.0
step = 0.1
value = 0.8

[node name="GreenSlider" type="HSlider" parent="VBoxContainer/Sliders"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 36.0
hint_tooltip = "Green"
custom_styles/slider = SubResource( 2 )
max_value = 3.0
step = 0.1
value = 0.8

[node name="BlueSlider" type="HSlider" parent="VBoxContainer/Sliders"]
margin_top = 40.0
margin_right = 150.0
margin_bottom = 56.0
hint_tooltip = "Blue"
custom_styles/slider = SubResource( 3 )
max_value = 3.0
step = 0.1
value = 0.8

[node name="cmin" type="SpinBox" parent="VBoxContainer/Sliders"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 84.0
min_value = -2.0
max_value = 2.0
step = 0.1
value = 0.1
prefix = "cmin"

[node name="cmax" type="SpinBox" parent="VBoxContainer/Sliders"]
margin_top = 88.0
margin_right = 150.0
margin_bottom = 112.0
min_value = -2.0
max_value = 2.0
step = 0.1
value = 0.8
prefix = "cmax"

[node name="Colors" type="Control" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 150.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Horizontal" type="HBoxContainer" parent="VBoxContainer/Colors"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 45, 45 )

[node name="Sprite" type="Node2D" parent="Viewport"]

[connection signal="value_changed" from="VBoxContainer/Sliders/RedSlider" to="." method="_on_RedSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sliders/GreenSlider" to="." method="_on_GreenSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sliders/BlueSlider" to="." method="_on_BlueSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sliders/cmin" to="." method="_on_cmin_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sliders/cmax" to="." method="_on_cmax_value_changed"]
